Followup to review comments.