@@ -2,18 +2,17 @@ plugins {
     id 'io.deephaven.project.register'
 }
 
-description 'Implementation for the HotSpot service to obtain JVM instrospection data.'
-
-dependencies {
-    implementation project(':Util')
-    Classpaths.inheritAutoService(project)
+configurations {
+    compile.extendsFrom configurations.dhUtil
 }
 
-// We can't combine `release` and `add-exports`, so we need to set the languageLevel here
-// overriding buildSrc/src/main/groovy/io.deephaven.java-toolchain-conventions.gradle.
-def languageLevel = Integer.parseInt((String)project.findProperty('languageLevel') ?: '11')
+dependencies {
+    compile project(':log-factory')
 
-tasks.withType(JavaCompile).configureEach {
-    sourceCompatibility = languageLevel
-    options.compilerArgs += ['--add-exports', 'java.management/sun.management=ALL-UNNAMED']
+    testRuntime project(path: ':configs'), project(path: ':test-configs')
+
+    testRuntimeOnly project(':log-to-slf4j')
+    Classpaths.inheritSlf4j(project, 'slf4j-simple', 'testRuntimeOnly')
+
+    Classpaths.inheritJUnitPlatform(project)
 }
